fix spacing issue between body content and global footer

--- a/public/styles/site/_component-global-footer.scss
+++ b/public/styles/site/_component-global-footer.scss
@@ -1,6 +1,7 @@
 .global-footer {
 	background-color: $footer-background-color;
 	padding: 3em 0 2em 0;
+	margin-top: -1.4em;
 
 	@media screen and (min-width: 660px) {
 		padding: 3em 0 1em 0;
